--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,7 +73,9 @@ INCLUDE_DIRECTORIES(${TINYCRYPTO_ROOT}/source/src/secret)
 INCLUDE_DIRECTORIES(${TINYCRYPTO_ROOT}/source/src/hkdf)
 INCLUDE_DIRECTORIES(${TINYCRYPTO_ROOT}/source/src/chacha20poly1305)
 
-INCLUDE_DIRECTORIES(${TINYMDNS_ROOT}/source/src/TinyMDNS)
+INCLUDE_DIRECTORIES(${TINYMDNS_ROOT}/source/src/dns-common)
+INCLUDE_DIRECTORIES(${TINYMDNS_ROOT}/source/src/dns-server)
+INCLUDE_DIRECTORIES(${TINYMDNS_ROOT}/source/src/mdns)
 
 INCLUDE_DIRECTORIES(${TINYHAP_ROOT}/include/hap-tcp)
 INCLUDE_DIRECTORIES(${TINYHAP_ROOT}/include/hap-support)
